# gesture_control

./: LICENSE  README.md
gesture_control/: package.xml  setup.cfg  setup.py
gesture_control/gesture_control/: controller.py  embedder.py  knn.py  utils.py
gesture_control/pose_estimator/: main.py  pose_estimation.py
gesture_control/pose_visualizer/: pose_visualizer.py
gesture_control/test/: test_knn.py  test_utils.py
gesture_control_interfaces/: CMakeLists.txt  package.xml
gesture_control_interfaces/msg/: BodyLandmarksStamped.msg  HandLandmarksStamped.msg
gesture_control_sim/: CMakeLists.txt  package.xml
gesture_control_sim/launch/: simulation.launch.py
gesture_control_sim/urdf/: robot.xacro
gesture_control_sim/worlds/: empty_world.model
