<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gesture_control_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>

  <author email="jehontan@gmail.com">Je Hon Tan</author>

  <maintainer email="jehontan@gmail.com">jehontan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>gazebo_ros</depend>
  <!-- <depend>urdf</depend> -->
  <depend>turtlebot3_description</depend>
  <depend>robot_state_publisher</depend>
  <depend>realsense_ros_gazebo</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
